--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -37,7 +37,7 @@
     <form action="edit" method="POST">
         <div class="form-group">
             <label for="_id">ID: </label>
-            <input class="form-control" type="text" name="_id" readonly id="" value="{{products._id}}" >
+            <input class="form-control" type="text" name="id" readonly id="" value="{{products._id}}" >
         </div>
         <div class="form-group">
             <label for="product_name">Tên Sản Phẩm: </label>
