--- a/views/allProducts.hbs
+++ b/views/allProducts.hbs
@@ -58,7 +58,7 @@
             <tr>
                 <td>{{_id}}</td>
                 <td>{{product_name}}</td>
-                <td><img src="products/photos/{{_id}}" alt="" width="50px"></td>
+                <td><img src="/products/photos/{{_id}}" alt="" width="50px"></td>
                 <td>{{[color]}}</td>
                 <td>{{[price]}}</td>
                 <td>
