--- a/views/insertSanPham.hbs
+++ b/views/insertSanPham.hbs
@@ -47,15 +47,15 @@
     <form action="/products/insert" enctype="multipart/form-data" method="POST">
 
         <div class="form-group">
-            <label for="product_name">Tên Sản Phẩm: </label>
+            <label for="product_name">Product name: </label>
             <input class="form-control" type="text" name="product_name" id="" required>
         </div>
         <div class="form-group">
-            <label for="color">Màu Sắc: </label>
+            <label for="color">Color: </label>
             <input class="form-control" type="text" name="color" id="" required>
         </div>
         <div class="form-group">
-            <label for="price">Giá: </label>
+            <label for="price">Price: </label>
             <input class="form-control" type="number" name="price" id="" required placeholder=" Enter number only">
         </div>
         <div class="form-group">
