--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -63,7 +63,7 @@
         </div>
         <div class="form-group">
             <label for="price">Upload: </label>
-            <input type="file" name="picture" class="form-control-file" value="{{products.image}}" accept="image/*" />
+            <input type="file" name="picture" class="form-control-file" value="{{products.image}}" accept="image/*" required/>
         </div>
 
         <input class="btn btn-outline-primary" type="submit" value="Submit">
