--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -15,34 +15,26 @@
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
 
-
 <body>
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-            <a class="nav-link" href="/products"><span class="fas fa-home"></span>&nbsp;</a>
+            <a class="nav-link" href="/products"><h2><span class="fas fa-home"></span>&nbsp;</h2></a>
         </li>
-        <li class="navbar-nav active">
-            <div class="nav-link">ATN</div>
-        </li> &nbsp;
-        <li class="nav-item ">
-            <a class="nav-link" href="/products/insert"></a>
+        <li class="navbar-nav active"><div class="nav-link"><h2>ATN Management &nbsp;</h2></div></li> &nbsp;
+        <li class="nav-item mt-lg-2">
+            <a class="btn btn-outline-secondary" href="/products/insert">Insert</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/products/search"></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/products/login"></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" href="#"></a>
-        </li>
+        <!--        <li class="nav-item">
+                    <a class="nav-link" href="/products/login">Log In</a>
+                </li>-->
     </ul>
     <form class="form-inline " action="/products/search" method="POST">
         <input class="form-control mr-sm-2" type="text" name="product_name" placeholder="Search">
         <button class="btn btn-outline-secondary" type="submit">Search</button>
     </form>
 </nav>
+
 <div class="container">
     <form action="/products/insert" enctype="multipart/form-data" method="POST">
 
