--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -23,7 +23,7 @@
         </li>
         <li class="navbar-nav active"><div class="nav-link"><h2>ATN Management &nbsp;</h2></div></li> &nbsp;
         <li class="nav-item mt-lg-2">
-            <a class="btn btn-outline-secondary" href="/products/insert">Insert</a>
+            <a class="btn btn-outline-secondary" href="/products">Back</a>
         </li>
         <!--        <li class="nav-item">
                     <a class="nav-link" href="/products/login">Log In</a>
