--- a/views/insert.hbs
+++ b/views/insert.hbs
@@ -14,15 +14,16 @@
 <form class="form-inline " action="/search" method="POST">
     <div class="navbar navbar-default">
         <div class="container">
-            <h1>
-                <span class="glyphicon glyphicon-home col-lg-1"></span>
+            <h2>
+                <a style="color: black" href="/"><span class="glyphicon glyphicon-home col-lg-1"></span></a>
                 <span class="col-lg-8">ATN Management</span>
                 <span class="col-lg-3" ><input class="form-control " type="text" name="product_name" placeholder="Search">
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search "></i></button></span>
-            </h1>
+            </h2>
         </div>
     </div>
 </form>
+
 <div class="container">
     <form action="/insert" enctype="multipart/form-data" method="POST">
 
@@ -42,7 +43,7 @@
             <label for="price">Upload: </label>
             <input type="file" name="picture" class="form-control-file" accept="image/*" / required>
         </div>
-        <input class="btn btn-primary" type="submit" value="Insert">
+        <input class="btn btn-success" type="submit" value="Insert">
     </form>
 </div>
 </body>
